--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,6 +21,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/content.css">
+    <script src="https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js"></script>
+    <script src="//unpkg.com/navigo@6"></script>
+
 
 </head>
 
